<resources>
    <string name="app_name">My Appointments</string>
    <string name="label_login">Inicio de Sesion</string>
    <string name="label_email">Correo</string>
    <string name="label_pass">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_signup">¿Aun no te has registrado?</string>
    <string name="label_register">Registro de Usuario</string>
    <string name="label_name">Nombre Completo</string>
    <string name="btn_register">Registrar</string>
    <string name="label_go_to_signin">¿Ya tienes una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_create_appointment">Reservar Cita</string>
    <string name="btn_my_appointment">Mis Citas</string>
    <string name="btn_log_out">Cerrar Sesion</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar Cita</string>
    <string name="label_description">Descripcion</string>
    <string name="label_speciality">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operacion</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Medico</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita medica # %1$d</string>
    <string name="item_appointment_date">Atencion el dia %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="label_my_appointments">Mis Citas Medicas</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="dialog_create_appointment_exit_title">¿Estas seguro que deseas salir?</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el registro, los datos que habias ingresado se perderan.</string>
    <string name="dialog_create_appointment_exit_positive_btn">Si, salir</string>
    <string name="dialog_create_appointment_exit_negative_btn">Continuar registro</string>
    <string name="validate_appointment_description">La descripcion es demasiado corta</string>
    <string name="label_scheduled_time">Hora de la cita</string>
    <string name="label_confirm_appointment_data">Datos de la cita</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha</string>
    <string name="validate_appointment_time">Es necesario definir una hora para la cita</string>
    <string name="error_loading_specialties">Ocurrio un problema al cargar las especialidades</string>
    <string name="error_loading_doctors">Ocurrio un problema al llamar los medicos</string>
    <string name="error_loading_hours">No se ha podido cargar las horas</string>
    <string name="label_selected_doctor_and_date">Selecciona un medico y una fecha, para ver las horas disponibles</string>
    <string name="label_not_available_hours">No se encontraron horas disponibles para el medico en el dia seleccionado</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por favor ingrese un correo y contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
</resources>