<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MenuActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:text="@string/label_welcome"
        android:textColor="@color/white"
        android:textSize="42sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateAppointment"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="18dp"
        android:background="@color/purple_700"
        android:drawableLeft="@drawable/ic_add_circle"
        android:paddingLeft="90dp"
        android:paddingRight="90dp"
        android:text="@string/btn_create_appointment"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMyAppointments"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="18dp"
        android:background="@color/purple_700"
        android:drawableLeft="@drawable/ic_date_calendar"
        android:paddingLeft="90dp"
        android:paddingRight="90dp"
        android:text="@string/btn_my_appointment"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="18dp"
        android:background="@color/purple_700"
        android:drawableLeft="@drawable/ic_power_off"
        android:paddingLeft="90dp"
        android:paddingRight="90dp"
        android:text="@string/btn_log_out"
        android:textColor="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>