<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CreateAppointmentActivity"
    android:id="@+id/createAppointmentLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:text="@string/label_create_appointment"
        android:textColor="@color/white"
        android:textSize="42sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:contentPadding="12dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_description"
                android:textColor="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_speciality"
                android:textColor="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerSpeciality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_type"
                android:textColor="@color/purple_500" />

            <RadioGroup
                android:id="@+id/radioGroupType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:checkedButton="@id/rbType1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbType1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type1"
                    android:textColor="@color/purple_500" />

                <RadioButton
                    android:id="@+id/rbType2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type2"
                    android:textColor="@color/purple_500" />

                <RadioButton
                    android:id="@+id/rbType3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type3"
                    android:textColor="@color/purple_500" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="18dp"
                android:background="@color/purple_700"
                android:drawableEnd="@drawable/ic_arrow_forward"
                android:paddingLeft="90dp"
                android:paddingRight="90dp"
                android:text="@string/btn_next"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:contentPadding="12dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_doctor"
                    android:textColor="@color/purple_500" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerDoctors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_scheduled_date"
                    android:textColor="@color/purple_500" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etScheduledDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                    android:maxLines="1"
                    android:onClick="onClickScheduleDate" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSelectDoctorAndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:textColor="@color/teal_700"
                    android:text="@string/label_selected_doctor_and_date"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvNotAvailableHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    tools:visibility="visible"
                    android:visibility="gone"
                    android:textColor="#FF0000"
                    android:text="@string/label_not_available_hours"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/radioGroupLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_hour1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:visibility="visible"
                            android:visibility="gone"
                            android:text="8:00 am"
                            android:textColor="@color/purple_500" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/radioGroupRight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_hour2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:visibility="visible"
                            android:visibility="gone"
                            android:text="8:30 am"
                            android:textColor="@color/purple_500" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNext2"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="18dp"
                    android:background="@color/purple_700"
                    android:drawableEnd="@drawable/ic_arrow_forward"
                    android:paddingLeft="90dp"
                    android:paddingRight="90dp"
                    android:text="@string/btn_next"
                    android:textColor="@color/white" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:contentPadding="12dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/label_confirm_appointment_data"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_description"
                        android:textColor="@color/purple_500" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvConfirmDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Dolor de cabeza" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_speciality"
                        android:textColor="@color/purple_500" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvConfirmSpeciality"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Oftalmologia" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_type"
                        android:textColor="@color/purple_500" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvConfirmType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Consulta" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_doctor"
                        android:textColor="@color/purple_500" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvConfirmDoctor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Medico Test" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_scheduled_date"
                        android:textColor="@color/purple_500" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvConfirmAppointmentDate"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="2018-12-12"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_scheduled_time"
                        android:textColor="@color/purple_500" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvConfirmAppointmentTime"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="3:00 PM"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnConfirmAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="18dp"
                    android:background="@color/purple_700"
                    android:drawableEnd="@drawable/ic_check"
                    android:paddingLeft="90dp"
                    android:paddingRight="90dp"
                    android:text="@string/btn_confirm"
                    android:textColor="@color/white" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>